# ans-large-alphabet

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
data/: download_data.sh
include/: ans_byte.hpp  ans_fold.hpp  ans_int.hpp  ans_msb.hpp  ans_reorder_fold.hpp  ans_sint.hpp  ans_smsb.hpp  ans_util.hpp  arith.hpp  bits.hpp  catch.hpp  compress_qmx.h  constants.hpp  cutil.hpp  interp.hpp  methods.hpp  qsufsort.hpp  shuff.hpp  stats.hpp  util.hpp  vbyte.hpp  zipf_dist.hpp
scripts/: download_data.sh  generate_data.sh
src/: benchmark.cpp  bucket_skew.cpp  fold_effectiveness.cpp  generate_bwtmtf.cpp  generate_inputs.cpp  generate_rlz.cpp  interp_test.cpp  lower_order_entropy.cpp  prelude.cpp  pseudo_adaptive.cpp  rescale_freqs.cpp  shuff.cpp  table_effectiveness.cpp  table_efficiency.cpp  test.cpp
